--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,14 @@ ROLLUP_URL=http://localhost:3000
 CONTINUUM_GRPC_URL=100.24.216.168:9090
 CONTINUUM_REST_URL=http://100.24.216.168:8080/api/v1
 
+# Database Configuration (TimescaleDB)
+DB_HOST=q3qz8ken0n.uwi84b59od.tsdb.cloud.timescale.com
+DB_PORT=36864
+DB_USER=tsdbadmin
+DB_PASSWORD=fermilabstsdb
+DB_NAME=tsdb
+DB_SSLMODE=require
+
 # Rate Limiting (requests per minute)
 RATE_LIMIT_ROLLUP=1000
 RATE_LIMIT_CONTINUUM_GRPC=500
