Update fermi-gateway service user/group in deployment script

--- a/deployments/fermi-gateway.service
+++ b/deployments/fermi-gateway.service
@@ -6,8 +6,8 @@ Wants=network-online.target
 
 [Service]
 Type=simple
-User=ubuntu
-Group=ubuntu
+User=ec2-user
+Group=ec2-user
 WorkingDirectory=/opt/fermi-api-gateway
 
 # Load environment variables from .env file
