--- a/deployments/fermi-gateway.service
+++ b/deployments/fermi-gateway.service
@@ -33,8 +33,8 @@ LimitNPROC=4096
 NoNewPrivileges=true
 PrivateTmp=true
 ProtectSystem=strict
-ProtectHome=true
-ReadWritePaths=/opt/fermi-api-gateway/logs
+# ProtectHome=true  # Disabled to allow database cert access if needed
+ReadWritePaths=/opt/fermi-api-gateway/logs /home/ec2-user/.postgresql
 
 # Logging
 StandardOutput=journal
