--- a/deployments/nginx.conf
+++ b/deployments/nginx.conf
@@ -103,6 +103,40 @@ server {
         proxy_set_header Connection "";
     }
 
+    # SSE streaming endpoint (stream-ticks) - special handling
+    # MUST come BEFORE the general /api/ location to take precedence
+    location /api/v1/continuum/stream-ticks {
+        # Rate limiting
+        limit_req zone=api burst=20 nodelay;
+        limit_req_status 429;
+
+        # Proxy to backend
+        proxy_pass http://fermi_gateway;
+        proxy_http_version 1.1;
+
+        # Headers
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header Connection "";
+
+        # SSE-specific settings - CRITICAL for streaming
+        proxy_buffering off;                    # Disable buffering for real-time streaming
+        proxy_cache off;                        # Disable caching
+        proxy_read_timeout 24h;                 # Keep connection alive for long-running streams
+        proxy_connect_timeout 10s;
+        proxy_send_timeout 24h;
+
+        # SSE headers
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+        add_header X-Accel-Buffering "no";      # Nginx-specific: disable buffering
+
+        # Chunked transfer encoding (required for SSE)
+        chunked_transfer_encoding on;
+    }
+
     # API endpoints (with rate limiting)
     location /api/ {
         # Rate limiting
