refactor: simplify nginx config structure
- Remove duplicate scripts (setup-ssl.sh, setup.sh, deploy.sh)
- Remove Let's Encrypt nginx.conf (not needed with Cloudflare)
- Rename nginx-http-only.conf to nginx.conf (single config approach)
- Update deploy-nginx.sh to reference renamed config
- Simplify deployments/README.md to document single config

Single production config optimized for Cloudflare proxy integration.
All SSL/TLS handled by Cloudflare - no certificates needed on origin.

--- a/deployments/nginx.conf
+++ b/deployments/nginx.conf
@@ -1,6 +1,6 @@
-# Fermi API Gateway - Nginx Reverse Proxy Configuration (HTTPS + SSL)
-# Production-grade configuration with SSL termination, security headers, and rate limiting
-# Domain: api.fermi.trade
+# Fermi API Gateway - Cloudflare Proxied Configuration for api.fermi.trade
+# Production-grade configuration with rate limiting and security
+# Designed to work behind Cloudflare proxy (SSL handled by Cloudflare)
 
 # Rate limiting zones - protect against abuse
 limit_req_zone $binary_remote_addr zone=general:10m rate=100r/s;
@@ -18,51 +18,11 @@ upstream fermi_gateway {
     keepalive_timeout 60s;
 }
 
-# HTTP server - redirect all to HTTPS
+# HTTP server
 server {
     listen 80;
     listen [::]:80;
     server_name api.fermi.trade;
-
-    # Remove nginx version from headers
-    server_tokens off;
-
-    # Allow Let's Encrypt ACME challenge
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-        allow all;
-    }
-
-    # Redirect all other HTTP traffic to HTTPS
-    location / {
-        return 301 https://$host$request_uri;
-    }
-}
-
-# HTTPS server
-server {
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
-    server_name api.fermi.trade;
-
-    # SSL certificate files (managed by certbot)
-    ssl_certificate /etc/letsencrypt/live/api.fermi.trade/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/api.fermi.trade/privkey.pem;
-    ssl_trusted_certificate /etc/letsencrypt/live/api.fermi.trade/chain.pem;
-
-    # SSL configuration - Modern security settings
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers 'ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384';
-    ssl_prefer_server_ciphers off;
-    ssl_session_cache shared:SSL:10m;
-    ssl_session_timeout 10m;
-    ssl_session_tickets off;
-
-    # OCSP stapling
-    ssl_stapling on;
-    ssl_stapling_verify on;
-    resolver 8.8.8.8 8.8.4.4 valid=300s;
-    resolver_timeout 5s;
 
     # Remove nginx version from headers
     server_tokens off;
@@ -79,14 +39,39 @@ server {
     access_log /var/log/nginx/fermi-gateway-access.log combined;
     error_log /var/log/nginx/fermi-gateway-error.log warn;
 
+    # Cloudflare real IP restoration
+    # Trust Cloudflare IPs for X-Forwarded-For
+    set_real_ip_from 173.245.48.0/20;
+    set_real_ip_from 103.21.244.0/22;
+    set_real_ip_from 103.22.200.0/22;
+    set_real_ip_from 103.31.4.0/22;
+    set_real_ip_from 141.101.64.0/18;
+    set_real_ip_from 108.162.192.0/18;
+    set_real_ip_from 190.93.240.0/20;
+    set_real_ip_from 188.114.96.0/20;
+    set_real_ip_from 197.234.240.0/22;
+    set_real_ip_from 198.41.128.0/17;
+    set_real_ip_from 162.158.0.0/15;
+    set_real_ip_from 104.16.0.0/13;
+    set_real_ip_from 104.24.0.0/14;
+    set_real_ip_from 172.64.0.0/13;
+    set_real_ip_from 131.0.72.0/22;
+    set_real_ip_from 2400:cb00::/32;
+    set_real_ip_from 2606:4700::/32;
+    set_real_ip_from 2803:f800::/32;
+    set_real_ip_from 2405:b500::/32;
+    set_real_ip_from 2405:8100::/32;
+    set_real_ip_from 2a06:98c0::/29;
+    set_real_ip_from 2c0f:f248::/32;
+    real_ip_header CF-Connecting-IP;
+    real_ip_recursive on;
+
     # Security headers
-    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
     add_header X-Frame-Options "DENY" always;
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
     add_header Referrer-Policy "strict-origin-when-cross-origin" always;
     add_header Permissions-Policy "geolocation=(), microphone=(), camera=()" always;
-    add_header Content-Security-Policy "default-src 'self' https:; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline';" always;
 
     # Compression - improve performance
     gzip on;
@@ -95,13 +80,32 @@ server {
     gzip_types text/plain text/css text/xml text/javascript application/json application/javascript application/xml+rss application/atom+xml;
     gzip_disable "msie6";
 
-    # Health check endpoint (no rate limiting)
+    # Health check endpoint (no buffering)
     location /health {
         proxy_pass http://fermi_gateway;
         proxy_http_version 1.1;
         proxy_set_header Connection "";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $http_cf_visitor;
+        proxy_set_header CF-Connecting-IP $http_cf_connecting_ip;
+        proxy_set_header CF-Ray $http_cf_ray;
 
         access_log off;  # Don't log health checks
+    }
+
+    # Ready check endpoint
+    location /ready {
+        proxy_pass http://fermi_gateway;
+        proxy_http_version 1.1;
+        proxy_set_header Connection "";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $http_cf_visitor;
+        proxy_set_header CF-Connecting-IP $http_cf_connecting_ip;
+        proxy_set_header CF-Ray $http_cf_ray;
     }
 
     # Metrics endpoint - RESTRICTED ACCESS
@@ -123,7 +127,6 @@ server {
     }
 
     # SSE streaming endpoint - special handling for long-running connections
-    # MUST come BEFORE the general /api/ location to take precedence
     location /api/v1/continuum/stream-ticks {
         # Rate limiting - stricter for streaming (20 req/sec)
         limit_req zone=api_strict burst=10 nodelay;
@@ -136,8 +139,9 @@ server {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Proto $http_cf_visitor;
+        proxy_set_header CF-Connecting-IP $http_cf_connecting_ip;
+        proxy_set_header CF-Ray $http_cf_ray;
         proxy_set_header Connection "";
 
         # SSE-specific settings - CRITICAL for streaming
@@ -168,8 +172,9 @@ server {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Proto $http_cf_visitor;
+        proxy_set_header CF-Connecting-IP $http_cf_connecting_ip;
+        proxy_set_header CF-Ray $http_cf_ray;
         proxy_set_header Connection "";
 
         # Timeouts
@@ -202,8 +207,9 @@ server {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Proto $http_cf_visitor;
+        proxy_set_header CF-Connecting-IP $http_cf_connecting_ip;
+        proxy_set_header CF-Ray $http_cf_ray;
         proxy_set_header Connection "";
 
         # Timeouts
